Fixes to work on Firefox

--- a/style/experiment.controls.scss
+++ b/style/experiment.controls.scss
@@ -49,6 +49,24 @@
     cursor: -moz-grabbing;
   }
 
+  &::-moz-range-track {
+    height: 2px;
+    width: 260px;
+    background-color: #A9A9A9;
+    margin: 10px 0 30px 0;
+    border: none;
+  }
+
+  &::-moz-range-thumb {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-color: #646464;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: none;
+  }
+
   &::-webkit-slider-thumb {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -58,7 +76,8 @@
     border-radius: 50%;
   }
 
-  &:focus::-webkit-slider-thumb {
+  &:focus::-webkit-slider-thumb,
+  &:focus::-moz-range-thumb {
     background-color: #D6ACD6;
   }
 
